2024-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (ert-resource-directory-format)
	(ert-resource-directory-trim-left-regexp)
	(ert-resource-directory-trim-right-regexp, ert-resource-directory)
	(ert-resource-file): Don't define.
	(tramp-archive--test-emacs28-p): Remove.
	(top): Remove unneeded skips.  Use original objects instead of
	their `tramp-compat-' counterparts when possible.

	* tramp-tests.el (seq): Don't require.
	(lock-file-name-transforms, process-file-return-signal-string)
	(remote-file-name-inhibit-locks, dired-copy-dereference): Don't declare.
	(ert-resource-directory-format)
	(ert-resource-directory-trim-left-regexp)
	(ert-resource-directory-trim-right-regexp, ert-resource-directory)
	(ert-resource-file): Don't define.
	(tramp--test-emacs28-p): Remove.
	(top): Remove unneeded skips.  Use original objects instead of
	their `tramp-compat-' counterparts when possible.

2024-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test02-file-name-dissect)
	(tramp-test02-file-name-dissect-simplified)
	(tramp-test02-file-name-dissect-separate): Extend tests.
	(tramp-test06-directory-file-name)
	(tramp-test26-file-name-completion)
	(tramp-test26-interactive-file-name-completion): Better handling
	of IPv6 hosts.

2024-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test41-special-characters-direct-async)
	(tramp-test42-utf8-direct-async): New tests.

2024-07-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test01-file-name-syntax)
	(tramp-test01-file-name-syntax-simplified)
	(tramp-test01-file-name-syntax-separate): Adapt tests.

2024-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.7.1 released

	* tramp-tests.el (tramp--test-deftest-without-file-attributes):
	New defmacro.
	(tramp-test18-file-attributes-without-file-attributes)
	(tramp-test19-directory-files-and-attributes-without-file-attributes)